# path_following

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
configs/: README.md  baseline_config.json
paper/: ctacn.cfg  ctacn.cls  path_following_draft.tex  template1019.tex
paper/reference_extracts/: heu_template_converted.docx  heu_template_gb_chunks.txt  heu_template_utf16_chunks.txt  heu_template_word.txt  old_draft.txt
scripts/: exp_01b_equal_lookahead.py  exp_02c_path_generalization_v3.py  exp_02c_path_generalization_v4.py  exp_03_monte_carlo.py  exp_04_parameter_sensitivity.py  exp_05b_ablation_v2.py  experiment_utils.py
src/baseline/: __init__.py  actuator.py  config.py  controller.py  heading_shaper.py  los.py  math_utils.py  metrics.py  pid.py  simulator.py  usv_model.py  velocity_scheduler.py
